tests/snapshots/snapshots__budget_thiserror_impl_src_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (488 words)

ast.rs
    10→pub enum Input<'a> {
    11→    Struct(Struct<'a>),
    12→    Enum(Enum<'a>),
    13→}
    15→pub struct Struct<'a> {
    16→    pub attrs: Attrs<'a>,
    17→    pub ident: Ident,
    18→    pub generics: &'a Generics,
    19→    pub fields: Vec<Field<'a>>,
    20→}
    22→pub struct Enum<'a> {
    23→    pub attrs: Attrs<'a>,
    24→    pub ident: Ident,
    25→    pub generics: &'a Generics,
    26→    pub variants: Vec<Variant<'a>>,
    27→}
    29→pub struct Variant<'a> {
    30→    pub original: &'a syn::Variant,
    31→    pub attrs: Attrs<'a>,
    32→    pub ident: Ident,
    33→    pub fields: Vec<Field<'a>>,
    34→}
    36→pub struct Field<'a> {
    37→    pub original: &'a syn::Field,
    38→    pub attrs: Attrs<'a>,
    39→    pub member: MemberUnraw,
    40→    pub ty: &'a Type,
    41→    pub contains_generic: bool,
    42→}
    44→#[derive(Copy, Clone)]
    45→pub enum ContainerKind {
    46→    Struct,
    47→    TupleStruct,
    48→    UnitStruct,
    49→    StructVariant,
    50→    TupleVariant,
    51→    UnitVariant,
    52→}

attr.rs
    11→pub struct Attrs<'a> {
    12→    pub display: Option<Display<'a>>,
    13→    pub source: Option<Source<'a>>,
    14→    pub backtrace: Option<&'a Attribute>,
    15→    pub from: Option<From<'a>>,
    16→    pub transparent: Option<Transparent<'a>>,
    17→    pub fmt: Option<Fmt<'a>>,
    18→}
    20→#[derive(Clone)]
    21→pub struct Display<'a> {
    22→    pub original: &'a Attribute,
    23→    pub fmt: LitStr,
    24→    pub args: TokenStream,
    25→    pub requires_fmt_machinery: bool,
    26→    pub has_bonus_display: bool,
    27→    pub infinite_recursive: bool,
    28→    pub implied_bounds: Set<(usize, Trait)>,
    29→    pub bindings: Vec<(Ident, TokenStream)>,
    30→}
    32→#[derive(Copy, Clone)]
    33→pub struct Source<'a> {
    34→    pub original: &'a Attribute,
    35→    pub span: Span,
    36→}
    38→#[derive(Copy, Clone)]
    39→pub struct From<'a> {
    40→    pub original: &'a Attribute,
    41→    pub span: Span,
    42→}
    44→#[derive(Copy, Clone)]
    45→pub struct Transparent<'a> {
    46→    pub original: &'a Attribute,
    47→    pub span: Span,
    48→}
    50→#[derive(Clone)]
    51→pub struct Fmt<'a> {
    52→    pub original: &'a Attribute,
    53→    pub path: ExprPath,
    54→}
    56→#[derive(Copy, Clone, Eq, PartialEq, Ord, PartialOrd, Debug)]
    57→pub enum Trait {
    58→    Debug,
    59→    Display,
    60→    Octal,
    61→    LowerHex,
    62→    UpperHex,
    63→    Pointer,
    64→    Binary,
    65→    LowerExp,
    66→    UpperExp,
    67→}

expand.rs

fallback.rs

fmt.rs
   166→struct FmtArguments {
   167→    named: BTreeSet<IdentUnraw>,
   168→    first_unnamed: Option<TokenStream>,
   169→}
   171→#[allow(clippy::unnecessary_wraps)]
   172→fn explicit_named_args(input: ParseStream) -> Result<FmtArguments> {
   173→    let ahead = input.fork();
   174→    if let Ok(set) = try_explicit_named_args(&ahead) {
   175→        input.advance_to(&ahead);
   176→        return Ok(set);
   177→    }
   178→
   179→    let ahead = input.fork();
   180→    if let Ok(set) = fallback_explicit_named_args(&ahead) {
   181→        input.advance_to(&ahead);
   182→        return Ok(set);
   183→    }
      →…

generics.rs
     8→pub struct ParamsInScope<'a> {
     9→    names: Set<&'a Ident>,
    10→}
    48→pub struct InferredBounds {
    49→    bounds: Map<String, (Set<String>, Punctuated<TokenStream, Token![+]>)>,
    50→    order: Vec<TokenStream>,
    51→}

lib.rs
    23→mod ast;
    24→mod attr;
    25→mod expand;
    26→mod fallback;
    27→mod fmt;
    28→mod generics;
    29→mod prop;
    30→mod scan_expr;
    31→mod unraw;
    32→mod valid;
    39→#[proc_macro_derive(Error, attributes(backtrace, error, from, source))]
    40→pub fn derive_error(input: TokenStream) -> TokenStream {
    41→    let input = parse_macro_input!(input as DeriveInput);
    42→    expand::derive(&input).into()
    43→}
    45→#[allow(non_camel_case_types)]
    46→struct private;

prop.rs

scan_expr.rs
     6→enum Input {
     7→    Keyword(&'static str),
     8→    Punct(&'static str),
     9→    ConsumeAny,
    10→    ConsumeBinOp,
    11→    ConsumeBrace,
    12→    ConsumeDelimiter,
    13→    ConsumeIdent,
    14→    ConsumeLifetime,
    15→    ConsumeLiteral,
    16→    ConsumeNestedBrace,
    17→    ExpectPath,
    18→    ExpectTurbofish,
    19→    ExpectType,
    20→    CanBeginExpr,
    21→    Otherwise,
    22→    Empty,
    23→}
    25→enum Action {
    26→    SetState(&'static [(Input, Action)]),
    27→    IncDepth,
    28→    DecDepth,
    29→    Finish,
    30→}

unraw.rs
    10→#[derive(Clone)]
    11→#[repr(transparent)]
    12→pub struct IdentUnraw(Ident);
    81→#[derive(Clone)]
    82→pub enum MemberUnraw {
    83→    Named(IdentUnraw),
    84→    Unnamed(Index),
    85→}

valid.rs
