tests/snapshots/snapshots__budget_thiserror_impl_subdir1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 5 → level 0 (11 words)

ast.rs
attr.rs
expand.rs
fallback.rs
fmt.rs
generics.rs
lib.rs
prop.rs
scan_expr.rs
unraw.rs
valid.rs
