tests/snapshots/snapshots__budget_thiserror_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 3 → level 0 (6 words)

aserror.rs
display.rs
lib.rs
private.rs
provide.rs
var.rs
